# confluent-kafka-go

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  DESIGN_AWS_OAUTHBEARER.md  IMPLEMENTATION_PLAN_AWS_OAUTHBEARER.md  README  README.md  ZENDESK.md  go.mod  go.sum  go.work  go.work.sum  service.yml  sonar-project.properties
.claude/: settings.local.json
.github/: CODEOWNERS  ISSUE_TEMPLATE  pull_request_template.md
.github/workflows/: base.yml
.semaphore/: create-git-tag.yml  project.yml  project_public.yml  semaphore.yml  semaphore_commands.ps1  semaphore_commands.sh  semaphore_integration_commands.sh
docs/: api.html
encoding/avro/: AvroSerializer.go  integration_test.go  rest_service.go  rest_service_test.go  schema.go  schema_registry_client.go  schema_registry_client_test.go  serde.go  serializer.go  serializer_test.go  testhelpers.go  util.go
examples/: .gitignore  README  README.md  go.mod  go.sum
examples/admin_alter_consumer_group_offsets/: admin_alter_consumer_group_offsets.go
examples/admin_alter_user_scram_credentials/: admin_alter_user_scram_credentials.go
examples/admin_create_acls/: admin_create_acls.go
examples/admin_create_topic/: admin_create_topic.go
examples/admin_delete_acls/: admin_delete_acls.go
examples/admin_delete_consumer_groups/: admin_delete_consumer_groups.go
examples/admin_delete_groups/: admin_delete_groups.go
examples/admin_delete_records/: admin_delete_records.go
examples/admin_delete_topics/: admin_delete_topics.go
examples/admin_describe_acls/: admin_describe_acls.go
examples/admin_describe_cluster/: admin_describe_cluster.go
examples/admin_describe_config/: admin_describe_config.go
examples/admin_describe_consumer_groups/: admin_describe_consumer_groups.go
examples/admin_describe_topics/: admin_describe_topics.go
examples/admin_describe_user_scram_credentials/: admin_describe_user_scram_credentials.go
examples/admin_elect_leaders/: admin_elect_leaders.go
examples/admin_incremental_alter_configs/: admin_incremental_alter_configs.go
examples/admin_list_consumer_group_offsets/: admin_list_consumer_group_offsets.go
examples/admin_list_consumer_groups/: admin_list_consumer_groups.go
examples/admin_list_offsets/: admin_list_offsets.go
examples/admin_user_scram_credentials/: admin_user_scram_credentials.go
examples/admin_user_scram_example/: admin_user_scram_example.go
examples/association_example/: association_example.go
examples/avro_generic_consumer_example/: avro_generic_consumer_example.go
examples/avro_generic_producer_example/: avro_generic_producer_example.go
examples/avro_specific_consumer_example/: avro_specific_consumer_example.go  my_record.go  user.go
examples/avro_specific_producer_example/: avro_specific_producer_example.go  my_record.avsc
examples/avro_specific_topicrecordname_consumer_example/: avro_specific_consumer_example.go  user_favorite_color_updated.go
examples/avro_specific_topicrecordname_producer_example/: avro_specific_producer_example.go  user.go  user_favorite_color_updated.avsc
examples/avrov2_consumer_encryption_example/: avrov2_consumer_encryption_example.go
examples/avrov2_consumer_example/: avrov2_consumer_example.go  user.avsc
kafka/: .gitignore  00version.go  01nocgo.go  CachedSchemaRegistry.go  README  README.md  Serializer.go  adminapi.go  adminapi_test.go  adminoptions.go  api.html  build_darwin.go  build_darwin_amd64.go  build_darwin_arm64.go  build_dynamic.go  build_dynamic_static.go  build_glibc_linux.go  build_glibc_linux_amd64.go  build_glibc_linux_arm64.go  build_glibc_linux_i386.go  build_glibc_linux_s390x.go  build_linux_static.go  build_musl_linux.go  build_musl_linux_amd64.go  build_musl_linux_arm64.go  build_musl_linux_s390x.go  build_static.go  build_static_all.go  build_static_darwin.go  build_static_unix.go  build_windows.go  byte_array_serializer.go  config.go  config_key.go  config_test.go  consumer.go  consumer_performance_test.go  consumer_test.go  context.go  deserialized_message.go  (+53 more)
kafka/go_rdkafka_generr/: go_rdkafka_generr.go
kafka/integration/: go.mod  go.sum  integration_mock_test.go  integration_test.go  testconf-example.json  testhelpers_test.go  txn_integration_test.go
kafka/integration/testresources/: docker-compose-kraft.yaml  docker-compose.yaml
kafka/integration/testresources/kraft/: Dockerfile
kafka/librdkafka/: .gitignore  README.md  bundle-import.sh  bundle-windows.cmd  bundle-windows.sh  import.sh  librdkafka.go  librdkafka_windows.mri  rdkafka.h  setup.sh
kafka/librdkafka_vendor/: .gitignore  README.md  bundle-import.sh  desired_BUILD.bazel  import.sh  librdkafka.go  rdkafka.h  rdkafka_mock.h
kafka/oauthbearer/aws/: TESTING.md  doc.go  example_test.go  go.mod  go.sum  handle_assert_test.go  jwt.go  jwt_test.go  provider.go  provider_real_test.go  provider_test.go  refresh_test.go  token_test.go
kafka/serialization/: serde.go
kafka/test_resources/: primitive_float.avsc  primitive_string.avsc
kafka/testresources/: docker-compose-kraft.yaml  docker-compose.yaml  kafka_jaas.conf  zookeeper_jaas.conf
kafka/testresources/kraft/: Dockerfile  server.properties
kafkatest/: .gitignore  README.md  deploy.sh  globals.json  go.mod  go.sum
mk/: Makefile  bootstrap-librdkafka.sh  doc-gen.py  semaphore_commands.sh  setup-go.ps1  setup-msys2-mingw64.sh
schemaregistry/: api.html  avro_generic.go  avro_generic_test.go  avro_specific.go  avro_specific_test.go  aws_glue_service.go  config.go  config_test.go  json_schema.go  json_schema_test.go  mock_schemaregistry_client.go  protobuf.go  protobuf_test.go  rest_service.go  rest_service_test.go  schemaregistry_client.go  schemaregistry_client_test.go  schemaregistry_service.go  serde.go  testhelpers.go
scripts/: update-changelog.py
serde/: avro_generic.go  avro_generic_test.go  avro_specific.go  avro_specific_test.go  json_schema.go  json_schema_test.go  protobuf.go  protobuf_test.go  serde.go  testhelpers.go
serdes/: avro.go  cached_schema_registry_client.go  rest_service.go
soaktest/: README.md  datadog.go  go.mod  go.sum  soaktest.go
(+290 files in other folders)
